--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -20,6 +20,7 @@
 .elements__image {
   width: 282px;
   height: 282px;
+  cursor: pointer;
 }
 
 .elements__trash {
@@ -66,4 +67,12 @@
 
 .elements__heart:hover {
   opacity: 0.5;
+}
+
+.elements__black-heart {
+  background: url(../../images/elementsblackheart.svg) no-repeat center;
+  background-size: contain;
+  width: 20.759px;
+  margin-right: 15px;
+  border: #000;
 }
