--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,10 +1,30 @@
 .popup {
   position: fixed;
   top: 120px;
+  transition: all 0.5s ease-in-out;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.popup__picture {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.popup__card-name {
+  color: #fff;
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: 10px;
 }
 
 .popup_hide {
-  display: none;
+  opacity: 1;
+  visibility: visible;
 }
 .popup__overlay {
   opacity: 0.5;
@@ -33,6 +53,13 @@
   position: relative;
 }
 
+.popup__image-container {
+  width: 240px;
+  height: 299px;
+  position: relative;
+  top: 20px;
+}
+
 .popup__close-button {
   background: url(../../images/formclosebutton.svg) no-repeat center;
   background-size: contain;
@@ -43,6 +70,13 @@
   right: 0;
   top: -40px;
   cursor: pointer;
+}
+
+.popup__close-button_image {
+  width: 30px;
+  height: 30px;
+  right: -35px;
+  top: -35px;
 }
 
 .popup__close-button:hover {
@@ -61,7 +95,7 @@
   line-height: normal;
 }
 
-.popup__name {
+.popup__input {
   color: #000;
   font-family: Inter;
   font-size: 14px;
@@ -75,7 +109,22 @@
   padding-bottom: 13px;
 }
 
-.popup__occupation {
+.popup__input_occupation {
+  color: #000;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: 30px;
+  width: 238px;
+  height: 14px;
+  border: none;
+  outline: none;
+  padding-bottom: 13px;
+}
+
+.popup__input_link {
   color: #000;
   font-family: Inter;
   font-size: 14px;
@@ -116,14 +165,43 @@
   opacity: 0.8;
 }
 
+@media screen and (min-width: 720px) {
+  .popup__image {
+    top: 50px;
+    width: 433px;
+    height: 540px;
+  }
+
+  .popup__close-button_image {
+    width: 40px;
+    height: 40px;
+    right: -50px;
+    top: -50px;
+  }
+
+  .popup__image-container {
+    width: 433px;
+    height: 540px;
+  }
+}
+
 @media screen and (min-width: 1280px) {
   .popup {
     top: 165px;
   }
 
+  .popup__image {
+    top: 50px;
+    width: 816px;
+  }
+
   .popup__content {
     width: 430px;
     height: 330px;
+  }
+
+  .popup__image-container {
+    width: 816px;
   }
 
   .popup__close-button {
@@ -139,10 +217,10 @@
     width: 358px;
     font-size: 24px;
   }
-  .popup__name {
+  .popup__input {
     width: 358px;
   }
-  .popup__occupation {
+  .popup__input_occupation {
     width: 358px;
   }
   .popup__line {
