--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -27,13 +27,15 @@
 .profile__name {
   margin: 0 10px 0 0;
   width: 196px;
-  height: 22px;
+  height: 25px;
   color: #fff;
   font-family: Inter;
   font-size: 22px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .profile__about-me {
@@ -45,6 +47,8 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .profile__button {
@@ -95,7 +99,7 @@
   .profile__name {
     margin: 0 17px 0 0;
     width: 373px;
-    height: 39px;
+    height: 50px;
     font-size: 42px;
     line-height: 114%;
   }
