listo para revision 1

--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -10,6 +10,8 @@
 
 .elements__container {
   background-color: #fff;
+  display: flex;
+  flex-direction: column;
   border-radius: 10px;
   width: 282px;
   height: 361px;
