cambios revision 2 sprint 8

--- a/blocks/elements.css
+++ b/blocks/elements.css
@@ -58,6 +58,8 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  margin-left: 25px;
+  margin-right: 5px;
 }
 
 .elements__heart {
