--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -60,7 +60,7 @@
 }
 
 .popup__close-button {
-  background: url(../../images/formclosebutton.svg) no-repeat center;
+  background: url(../images/formclosebutton.svg) no-repeat center;
   background-size: contain;
   border: none;
   width: 26px;
