--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -53,7 +53,7 @@
 }
 
 .profile__button {
-  background: url(../../images/profilebutton.svg) no-repeat center;
+  background: url(../images/profilebutton.svg) no-repeat center;
   background-size: cover;
   width: 18px;
   height: 18px;
@@ -66,7 +66,7 @@
 }
 
 .profile__add-button {
-  background: url(../../images/profileaddbutton.svg) no-repeat center;
+  background: url(../images/profileaddbutton.svg) no-repeat center;
   background-size: cover;
   width: 282px;
   height: 50px;
@@ -115,7 +115,7 @@
   }
 
   .profile__add-button {
-    background: url(../../images/profileaddbutton2.svg) no-repeat center;
+    background: url(../images/profileaddbutton2.svg) no-repeat center;
     width: 150px;
   }
 }
