--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -5,11 +5,19 @@
   padding-top: 38px;
 }
 
-.profile__picture {
+.profile__picture-wrapper {
+  position: relative;
+  overflow: hidden;
   width: 120px;
-  align-items: center;
+  height: 120px;
   border-radius: 50%;
   margin-bottom: 26px;
+}
+
+.profile__picture {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .profile__container {
@@ -65,6 +73,32 @@
   opacity: 0.6;
 }
 
+.profile__picture-button {
+  position: absolute;
+  background: url(../images/profilepicturepencil.svg) no-repeat center;
+  background-size: cover;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 26px;
+  height: 26px;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.profile__picture-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+}
+
+.profile__picture-wrapper:hover .profile__picture-overlay {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
 .profile__add-button {
   background: url(../images/profileaddbutton.svg) no-repeat center;
   background-size: cover;
@@ -117,5 +151,8 @@
   .profile__add-button {
     background: url(../images/profileaddbutton2.svg) no-repeat center;
     width: 150px;
+  }
+  .profile__picture-wrapper {
+    margin-right: 30px;
   }
 }
