cambios para cards

--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -56,7 +56,12 @@
   height: 272px;
 }
 
-.popup__picturebox {
+/* .popup__picturebox {
+  padding-bottom: -15px;
+  text-align: center;
+} */
+
+.popup__wrapper {
   padding-bottom: -15px;
   text-align: center;
 }
