--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -10,7 +10,6 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  
 }
 
 .popup__card-name {
@@ -57,10 +56,10 @@
   height: 272px;
 }
 
-/* .popup__picturebox {
-  padding-bottom: -15px;
-  text-align: center;
-} */
+.popup__content_card {
+  width: 430px;
+  height: 151px;
+}
 
 .popup__wrapper {
   padding-bottom: -15px;
@@ -197,6 +196,11 @@
   opacity: 0.5;
 }
 
+.popup__save-button_delete {
+  width: 358px;
+  margin-top: 0;
+}
+
 @media screen and (min-width: 720px) {
   .popup_image {
     top: 50px;
@@ -226,6 +230,16 @@
   }
   .popup__title_picture {
     margin-bottom: 30px;
+  }
+
+  .popup__content_card {
+    width: 430px;
+    height: 151px;
+  }
+
+  .popup__save-button_delete {
+    width: 358px;
+    margin-top: 0;
   }
 }
 
@@ -286,5 +300,14 @@
 
   .popup__title_picture {
     margin-bottom: 10px;
+  }
+
+  .popup__content_card {
+    width: 430px;
+    height: 151px;
+  }
+  .popup__save-button_delete {
+    width: 358px;
+    margin-top: 0;
   }
 }
